Fixing layout issues and handling scroll issues

--- a/src/app/math-test/math-test.component.css
+++ b/src/app/math-test/math-test.component.css
@@ -5,7 +5,7 @@ margin-top:10px;
 .number {
 font-family: 'Courier New', Courier, monospace;
 font-weight:bold;
-font-size:180%
+font-size:200%
 }
 
 .number.correct {
@@ -30,9 +30,10 @@ margin-bottom:20px;
 
 .answer-holder, .answer-placeholder {
   border-top: 1px solid #000;
-  height:100px;
+  height:65px;
 }
 
 #solutionInput {
   font-size:200%;
+  height:55px;
 }
